[package]
name = "twitter-pinned"
version = "0.1.1"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.44"
futures = "0.3.17"
reqwest = { version = "0.11.5", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
structopt = "0.3.23"
tokio = { version = "1.11.0", features = ["full"] }
