[package]
name = "twitter-pinned"
version = "0.5.0-alpha.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.58"
futures = "0.3.21"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
structopt = "0.3.26"
tokio = { version = "1.20.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "retry", "reconnect", "buffer"] }
