[package]
name = "twitter-pinned"
version = "0.6.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.58"
futures = "0.3.21"
http = "0.2.8"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
structopt = "0.3.26"
tokio = { version = "1.20.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "retry", "reconnect", "buffer", "timeout"] }
tower-http = { version = "0.3.4", features = ["set-header", "auth", "trace", "decompression-gzip"] }
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
thiserror = "1.0.31"
http-body = "0.4.5"
form_urlencoded = "1.0.1"
serde_urlencoded = "0.7.1"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
